--- a/apps/backend/java-services/infrastructure/tenant-service/pom.xml
+++ b/apps/backend/java-services/infrastructure/tenant-service/pom.xml
@@ -46,7 +46,9 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
-        <!-- OpenTelemetry Observability & Tracing -->
+        <!-- OpenTelemetry Observability & Tracing - Temporarily Disabled -->
+        <!-- Will re-enable once basic service is working -->
+        <!--
         <dependency>
             <groupId>io.opentelemetry.instrumentation</groupId>
             <artifactId>opentelemetry-spring-boot-starter</artifactId>
@@ -59,6 +61,7 @@
             <groupId>io.opentelemetry</groupId>
             <artifactId>opentelemetry-exporter-otlp</artifactId>
         </dependency>
+        -->
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
