--- a/apps/backend/java-services/infrastructure/tenant-service/src/main/resources/application.yml
+++ b/apps/backend/java-services/infrastructure/tenant-service/src/main/resources/application.yml
@@ -6,6 +6,8 @@ server:
 spring:
   application:
     name: tenant-service
+  config:
+    import: configserver:http://localhost:8888
 
   # Database Configuration
   datasource:
@@ -82,35 +84,35 @@ eureka:
     prefer-ip-address: true
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
-# Actuator Configuration
-# OpenTelemetry Configuration
-otel:
-  service:
-    name: ${spring.application.name}
-    version: 2.0.0
-  resource:
-    attributes:
-      service.namespace: modernreservation
-      service.instance.id: ${eureka.instance.instance-id}
-  exporter:
-    otlp:
-      endpoint: ${OTEL_EXPORTER_OTLP_ENDPOINT:http://localhost:4317}
-      headers: ${OTEL_EXPORTER_OTLP_HEADERS:}
-  traces:
-    exporter: otlp
-  metrics:
-    exporter: otlp
-  logs:
-    exporter: otlp
-  instrumentation:
-    spring-webmvc:
-      enabled: true
-    jdbc:
-      enabled: true
-    redis:
-      enabled: true
-    jpa:
-      enabled: true
+# OpenTelemetry Configuration - Temporarily Disabled
+# Will re-enable once basic service is working
+#otel:
+#  service:
+#    name: ${spring.application.name}
+#    version: 2.0.0
+#  resource:
+#    attributes:
+#      service.namespace: modernreservation
+#      service.instance.id: ${eureka.instance.instance-id}
+#  exporter:
+#    otlp:
+#      endpoint: ${OTEL_EXPORTER_OTLP_ENDPOINT:http://localhost:4317}
+#      headers: ${OTEL_EXPORTER_OTLP_HEADERS:}
+#  traces:
+#    exporter: otlp
+#  metrics:
+#    exporter: otlp
+#  logs:
+#    exporter: otlp
+#  instrumentation:
+#    spring-webmvc:
+#      enabled: true
+#    jdbc:
+#      enabled: true
+#    redis:
+#      enabled: true
+#    jpa:
+#      enabled: true
 
 management:
   endpoints:
@@ -124,6 +126,10 @@ management:
     export:
       prometheus:
         enabled: true
+  # Tracing temporarily disabled
+  #tracing:
+  #  sampling:
+  #    probability: 1.0
 
 # Logging Configuration
 logging:
@@ -134,8 +140,8 @@ logging:
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
   pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
-    file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+    console: "%d{yyyy-MM-dd HH:mm:ss} [%X{traceId:-},%X{spanId:-}] [%thread] %-5level [%logger{36}] - %msg%n"
+    file: "%d{yyyy-MM-dd HH:mm:ss} [%X{traceId:-},%X{spanId:-}] [%thread] %-5level [%logger{36}] - %msg%n"
   file:
     name: logs/tenant-service.log
     max-size: 10MB
